# lrclibpub

./: .gitignore  AGENTS.md  README.md  bun.lockb  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts  wrangler.toml
.github/workflows/: deploy.yml
.roo/: mcp.json
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md
scripts/: build-wasm.mjs
solver/: Cargo.toml  build.zig
solver/src/: lib.rs  main.zig
src/: app.css  app.html
src/lib/: lrc.ts  types.ts  utils.ts  worker.ts
src/lib/components/: Footer.svelte  ValidationWarning.svelte
src/lib/components/icons/: ClockIcon.svelte  CopyIcon.svelte  DocumentIcon.svelte  DownloadIcon.svelte  EyeIcon.svelte  SearchIcon.svelte  index.ts
src/lib/lrc/: normalizer.ts  parser.ts  validator.ts
src/lib/wasm/: Cargo.toml  lrclibpub.d.ts  lrclibpub.js  lrclibpub.wasm  lrclibpub_bg.js  lrclibpub_bg.wasm  lrclibpub_bg.wasm.d.ts  package.json  solver.wasm
src/lib/wasm/pkg/: lrclibup_wasm.d.ts  lrclibup_wasm.js  lrclibup_wasm_bg.wasm  lrclibup_wasm_bg.wasm.d.ts  package.json
src/lib/wasm/src/: lib.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/api/challenge/: +server.ts
src/routes/api/get/: +server.ts
src/routes/api/get-cached/: +server.ts
src/routes/api/publish/: +server.ts
src/routes/api/request-challenge/: +server.ts
src/routes/search/: +page.svelte
static/: test.html  wasm-test-worker.js
static/wasm/: lrclibpub.wasm  lrclibup_wasm.wasm
wasm/: build.zig
wasm/src/: main.zig
(+2 files in other folders)
