[package]
name = "lrclibup-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
data-encoding = "2.3.3"
ring = "0.16.20"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console"] }